# i3ds-trigger

./: CMakeLists.txt  petamake.sh
include/: peta_trigger.hpp  trigger_driver.h
src/: i3ds_trigger.cpp  peta_trigger.cpp  trigger_demo.c  trigger_driver.c
